# FruitCountingEngine

./: .gitignore  D2.csv  README.md
BBTracker/: README.md  main.cpp
BBTracker/Detector/yolov5/src/: GLViewer.cpp
BBTracker/Tracker/LK-Tracker/: CMakeLists.txt  vpi_tracker.h
BBTracker/Tracker/MO-Tracker/: CMakeLists.txt  Kalman.h
BBTracker/cmake/: Findglog.cmake
Counting-App/: D2.csv
Counting-App/Detector/ssd/: ssd_detection.cpp
Counting-App/Detector/yolov5/: CMakeLists.txt
Counting-App/Test/: mo_tracker_test.cpp
Counting-App/Tracker/: CMakeLists.txt
Counting-App/Tracker/LK-Tracker/: det_and_track.cpp  vpi_tracker.cpp
Counting-App/Tracker/MO-Tracker/: pipeline.h
Counting-App/video/: D2.avi
Data/: README.md
Engine/: CMakeLists.txt  D2.csv  README.md  main.cpp
Engine/Detector/: CMakeLists.txt
Engine/Detector/yolov5/: CMakeLists.txt  yolov5_detection.cpp  yolov5_detection.h
Engine/Detector/yolov5/include/: common.h  utils.h  yololayer.h
Engine/Detector/yolov5/src/: GLViewer.cpp  common.cpp
Engine/Engine/include/: AppModel.h  MainWindow.h  QCameraCapture.h  QImageProcessing.h  QMODetAndTrack.h
Engine/Engine/src/: MainWindow.cpp  QCameraCapture.cpp  QMODetAndTrack.cpp
Engine/Engine/ui/: mainwindow.ui
Engine/EngineGUI/include/: AppCommon.h  AppConstants.h  AppModel.h  MainWindow.h  QCameraCapture.h  QGLViewer.h  QMODetAndTrack.h
Engine/EngineGUI/src/: AppModel.cpp  MainWindow.cpp  QCameraCapture.cpp  QGLViewer.cpp  QMODetAndTrack.cpp  main.cpp
Engine/EngineGUI/ui/: mainwindow.ui
Engine/Test/: detector_image_test.cpp  detector_test.cpp  ssd-test.cpp  zed2_pipeline.h
Engine/Tracker/LK-Tracker/: CMakeLists.txt  lk_tracker.h  munkres.cpp  vpi_tracker.h
Engine/Tracker/MO-Tracker/: CMakeLists.txt  Ctracker.cpp  LocalTracker.cpp  LocalTracker.h  defines.h  track.h
EngineGUI/: CMakeLists.txt  EngineGUI.pro
Model/: .gitignore
Model/Yolo/: README.md  dataset.py  yolo-demo.ipynb
Model/Yolo/labels/: train.cache
Model/Yolo/labels/test/: fruit110.txt  fruit118.txt  fruit14.txt  fruit151.txt  fruit180.txt  fruit198.txt  fruit32.txt  fruit41.txt  fruit8.txt  fruit81.txt
Model/Yolo/labels/train/: fruit100.txt  fruit101.txt  fruit105.txt  fruit106.txt  fruit107.txt  fruit109.txt  fruit112.txt  fruit114.txt  fruit116.txt  fruit117.txt  fruit121.txt  fruit127.txt  fruit130.txt  fruit131.txt  fruit134.txt  fruit136.txt  fruit137.txt  fruit143.txt  fruit148.txt  fruit15.txt  fruit154.txt  fruit159.txt  fruit163.txt  fruit165.txt  fruit168.txt  fruit17.txt  fruit171.txt  fruit175.txt  fruit176.txt  fruit177.txt  fruit179.txt  fruit184.txt  fruit186.txt  fruit187.txt  fruit188.txt  fruit196.txt  fruit197.txt  fruit199.txt  fruit209.txt  fruit211.txt  (+31 more)
Model/Yolo/labels/val/: fruit103.txt  fruit115.txt  fruit144.txt  fruit145.txt  fruit155.txt  fruit178.txt  fruit200.txt  fruit23.txt  fruit50.txt  fruit63.txt  fruit7.txt  fruit93.txt
Model/Yolo/yolov5/: .gitignore
Model/Yolo/yolov5/data/: fruit.yaml
Model/data/test/: test_data.csv
Model/data/test/Annotations/: fruit104.xml  fruit164.xml  fruit70.xml
Model/data/train/Annotations/: fruit109.xml  fruit11.xml  fruit115.xml  fruit116.xml  fruit119.xml  fruit121.xml  fruit123.xml  fruit125.xml  fruit126.xml  fruit127.xml  fruit129.xml  fruit145.xml  fruit148.xml  fruit151.xml  (+23 more)
Model/faster-rcnn/: config.py  engine.py  trt_inference.py  util.py
Model/ssd/: SSD_test.ipynb  train_ssd.py
Task1-DragonFruit-Detection/: config.py  dataset.py  datasetLoader.py  dragon-fruit-detection.ipynb  engine.py  inference.py  model.py  trainer.py  trt_inference.py  util.py
Task1-DragonFruit-Detection/Yolo/: README.md  dataset.py
Task1-DragonFruit-Detection/Yolo/yolov5/: .gitignore
Task1-DragonFruit-Detection/data/train/: train_data.csv
Task1-DragonFruit-Detection/faster-rcnn/: inference.py
Task1-DragonFruit-Detection/model/: labels.txt
Task1-DragonFruit-Detection/yolo/: dataset.py
Task2-Record-data/: README.md
Task3-TensorRT-Engine-with-Zed-2/: CMakeLists.txt  README.md  README.md.txt  main.cpp
Task3-TensorRT-Engine-with-Zed-2/test/: trt-tes.cpp  zed-test.cpp
Task3-TensorRT-Engine-with-Zed-2/yolov5/zed-yolov5/: CMakeLists.txt  detect.cpp
Task4-Counting-Dragon-Fruit/: README.md
Task4-Counting-Dragon-Fruit/BBTracker/: CMakeLists.txt  D2.csv  README.md  main.cpp
Task4-Counting-Dragon-Fruit/BBTracker/BBTracker/include/: bbtracker.h  defines.h  pipeline.h  ssd_detect.h
Task4-Counting-Dragon-Fruit/BBTracker/BBTracker/src/: bbtracker.cpp  main.cpp  ssd_detect.cpp  yolov5.cpp
Task4-Counting-Dragon-Fruit/BBTracker/Detector/: CMakeLists.txt
Task4-Counting-Dragon-Fruit/BBTracker/Detector/ssd/: CMakeLists.txt  ssd_detection.cpp  ssd_detection.h
Task4-Counting-Dragon-Fruit/BBTracker/Detector/yolov5/: yolov5_detection.cpp  yolov5_detection.h
Task4-Counting-Dragon-Fruit/BBTracker/Detector/yolov5/src/: calibrator.cpp  yololayer.cu
Task4-Counting-Dragon-Fruit/BBTracker/Test/: detector_test.cpp  mo_tracker_test.cpp  pipeline.h  zed2_pipeline.h  zed2_test.cpp
Task4-Counting-Dragon-Fruit/BBTracker/Tracker/: CMakeLists.txt  det_and_track.cpp  det_and_track.h
Task4-Counting-Dragon-Fruit/BBTracker/Tracker/LK-Tracker/: CMakeLists.txt  det_and_track.cpp  det_and_track.h  vpi_tracker.cpp  vpi_tracker.h
Task4-Counting-Dragon-Fruit/BBTracker/Tracker/MO-Tracker/: CMakeLists.txt  pipeline.h
Task4-Counting-Dragon-Fruit/BBTracker/include/: pipeline.h  ssd_detect.h
Task4-Counting-Dragon-Fruit/BBTracker/src/: main.cpp
Task4-Counting-Dragon-Fruit/BoundingBoxTracking/: CMakeLists.txt  README.md  cuda_utils.cu  cuda_utils.cuh  dashcam_bboxes.txt  main.cpp
Task4-Counting-Dragon-Fruit/zed-custom-box/include/: common.hpp
TensorRT-Engine/: README.md
TensorRT-Engine/ssd/: CMakeLists.txt
TensorRT-Engine/yolov5/include/: yololayer.h
TensorRT-Engine/yolov5/src/: yolov5.cpp
TensorRT-Engine/yolov5/zed-yolov5/: LICENSE  README.md
Tools/: bag2image.py
model/Yolo/: detector.py  yolo-demo.ipynb
model/Yolo/labels/: val.cache
model/Yolo/yolov5/: .gitignore
model/faster-rcnn/: model.py
(+284 files in other folders)
